Install framer-motion and react-icons

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "expo-asset": "latest",
     "expo-file-system": "latest",
     "expo-gl": "latest",
+    "framer-motion": "^12.23.11",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
@@ -64,6 +65,7 @@
     "react-day-picker": "latest",
     "react-dom": "^19",
     "react-hook-form": "latest",
+    "react-icons": "^5.5.0",
     "react-native": "latest",
     "react-resizable-panels": "latest",
     "recharts": "latest",
